src/objects/BFM_File__c.object
<CustomObject>
    <fields>
        <fullName>Body_Blob__c</fullName>
        <label>Body Blob</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <label>File Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>BFM File</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>View_Files</fullName>
        <columns>NAME</columns>
        <columns>File_Name__c</columns>
        <columns>File_Type__c</columns>
        <columns>Size__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>View Files</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>FILE-{000000}</displayFormat>
        <label>BFM File Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>